[package]
name = "assignment"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
futures = "0.3"
tokio-tungstenite = { version = "*", features = ["native-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
ed25519-dalek = { version = "*", features = ["rand_core"] }
bincode = "1.3"
rand = "0.8.5"